--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <base href="/" />
-    <link rel="icon" href="/demo/favicon.ico" />
+    <link rel="icon" href="/react-project/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="/demo/logo192.png" />
-    <link rel="manifest" href="/demo/manifest.json" />
+    <link rel="apple-touch-icon" href="/react-project/logo192.png" />
+    <link rel="manifest" href="/react-project/manifest.json" />
     <title>React App</title>
   </head>
   <body>
